--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -20,6 +20,18 @@
     background-size: cover;
     background-position: center center;
 }
+.home_image_continer{
+    background: url("../../assets/imgs/light_bulb.webp");
+    width: 100%;
+    height: 500px;
+    background-attachment:fixed;
+    background-size:600px;
+    background-position: center top;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    z-index: 10;
+    margin-bottom: 10px;
+}
 .home_intro_container > img{
    width: 100%;
    max-width: 1200px;
